@@ -16,23 +16,26 @@ package com.liferay.portal.layoutconfiguration.util.velocity;
 
 import com.liferay.portal.kernel.json.JSONFactoryUtil;
 import com.liferay.portal.kernel.json.JSONObject;
+import com.liferay.portal.kernel.model.LayoutTypePortlet;
+import com.liferay.portal.kernel.model.Portlet;
 import com.liferay.portal.kernel.portlet.PortletContainerUtil;
 import com.liferay.portal.kernel.portlet.PortletJSONUtil;
+import com.liferay.portal.kernel.portlet.PortletProvider;
+import com.liferay.portal.kernel.portlet.PortletProviderUtil;
+import com.liferay.portal.kernel.service.PortletLocalServiceUtil;
 import com.liferay.portal.kernel.servlet.BufferCacheServletResponse;
 import com.liferay.portal.kernel.settings.ModifiableSettings;
+import com.liferay.portal.kernel.settings.PortletInstanceSettingsLocator;
 import com.liferay.portal.kernel.settings.Settings;
 import com.liferay.portal.kernel.settings.SettingsFactoryUtil;
+import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.ClassUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.StringBundler;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.Validator;
+import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.layoutconfiguration.util.PortletRenderer;
-import com.liferay.portal.model.LayoutTypePortlet;
-import com.liferay.portal.model.Portlet;
-import com.liferay.portal.service.PortletLocalServiceUtil;
-import com.liferay.portal.theme.ThemeDisplay;
-import com.liferay.portal.util.WebKeys;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -65,12 +68,14 @@ public class TemplateProcessor implements ColumnProcessor {
 			_portlet = PortletLocalServiceUtil.getPortletById(
 				themeDisplay.getCompanyId(), portletId);
 		}
+		else {
+			_portlet = null;
+		}
 
 		_portletAjaxRender = GetterUtil.getBoolean(
 			request.getAttribute(WebKeys.PORTLET_AJAX_RENDER));
 
-		_portletRenderers = new TreeMap<Integer, List<PortletRenderer>>(
-			_renderWeightComparator);
+		_portletRenderers = new TreeMap<>(_renderWeightComparator);
 	}
 
 	public Map<Integer, List<PortletRenderer>> getPortletRenderers() {
@@ -98,10 +103,9 @@ public class TemplateProcessor implements ColumnProcessor {
 
 		List<Portlet> portlets = layoutTypePortlet.getAllPortlets(columnId);
 
-		StringBundler sb = new StringBundler(portlets.size() + 11);
+		StringBundler sb = new StringBundler(portlets.size() * 3 + 10);
 
-		sb.append("<div class=\"");
-		sb.append("portlet-dropzone");
+		sb.append("<div class=\"portlet-dropzone");
 
 		if (layoutTypePortlet.isCustomizable() &&
 			layoutTypePortlet.isColumnDisabled(columnId)) {
@@ -129,8 +133,8 @@ public class TemplateProcessor implements ColumnProcessor {
 		for (int i = 0; i < portlets.size(); i++) {
 			Portlet portlet = portlets.get(i);
 
-			Integer columnCount = new Integer(portlets.size());
-			Integer columnPos = new Integer(i);
+			Integer columnCount = Integer.valueOf(portlets.size());
+			Integer columnPos = Integer.valueOf(i);
 
 			PortletRenderer portletRenderer = new PortletRenderer(
 				portlet, columnId, columnCount, columnPos);
@@ -148,7 +152,7 @@ public class TemplateProcessor implements ColumnProcessor {
 					renderWeight);
 
 				if (portletRenderers == null) {
-					portletRenderers = new ArrayList<PortletRenderer>();
+					portletRenderers = new ArrayList<>();
 
 					_portletRenderers.put(renderWeight, portletRenderers);
 				}
@@ -175,15 +179,6 @@ public class TemplateProcessor implements ColumnProcessor {
 			_request, bufferCacheServletResponse, _portlet);
 
 		return bufferCacheServletResponse.getString();
-	}
-
-	/**
-	 * @deprecated As of 6.2.0, replaced by {@link #processMax()}
-	 */
-	@Deprecated
-	@Override
-	public String processMax(String classNames) throws Exception {
-		return processMax();
 	}
 
 	@Override
@@ -227,8 +222,9 @@ public class TemplateProcessor implements ColumnProcessor {
 		ThemeDisplay themeDisplay = (ThemeDisplay)_request.getAttribute(
 			WebKeys.THEME_DISPLAY);
 
-		Settings settings = SettingsFactoryUtil.getPortletInstanceSettings(
-			themeDisplay.getLayout(), portletId);
+		Settings settings = SettingsFactoryUtil.getSettings(
+			new PortletInstanceSettingsLocator(
+				themeDisplay.getLayout(), portletId));
 
 		ModifiableSettings modifiableSettings =
 			settings.getModifiableSettings();
@@ -255,14 +251,26 @@ public class TemplateProcessor implements ColumnProcessor {
 		return processPortlet(portletId);
 	}
 
-	private static RenderWeightComparator _renderWeightComparator =
+	@Override
+	public String processPortlet(
+			String portletProviderClassName,
+			PortletProvider.Action portletProviderAction)
+		throws Exception {
+
+		String portletId = PortletProviderUtil.getPortletId(
+			portletProviderClassName, portletProviderAction);
+
+		return processPortlet(portletId);
+	}
+
+	private static final RenderWeightComparator _renderWeightComparator =
 		new RenderWeightComparator();
 
-	private Portlet _portlet;
-	private boolean _portletAjaxRender;
-	private Map<Integer, List<PortletRenderer>> _portletRenderers;
-	private HttpServletRequest _request;
-	private HttpServletResponse _response;
+	private final Portlet _portlet;
+	private final boolean _portletAjaxRender;
+	private final Map<Integer, List<PortletRenderer>> _portletRenderers;
+	private final HttpServletRequest _request;
+	private final HttpServletResponse _response;
 
 	private static class RenderWeightComparator implements Comparator<Integer> {
 
